fixed css to ignore focus and hover on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+*:focus {
+  outline: none;
+}
+
 p, h1 {
   color: white;
   font-family: Helvetica, sans-serif;
@@ -28,15 +32,6 @@ body {
   transition: all .1s linear;
   color: white;
   width: 100%;
-}
-
-.addtodo_input:focus {
-  outline: none;
-  background: rgba(224, 224, 224, 0.2);
-}
-
-.addtodo_input:hover {
-  background: rgba(224, 224, 224, 0.2);
 }
 
 .addtodo_input::placeholder {
@@ -81,10 +76,6 @@ body {
   cursor: pointer;
 }
 
-.todo:focus {
-  outline: 2px solid white;
-}
-
 .todo_container {
   display: flex;
   flex-direction: column;
@@ -127,28 +118,6 @@ body {
   padding: 1rem;
 }
 
-.todo_edit_input:focus {
-  outline: none;
-  background: rgba(224, 224, 224, 0.2);
-}
-
-.todo_edit_input:hover {
-  background: rgba(224, 224, 224, 0.2);
-}
-
-.todo_icon:hover {
-  font-size: 2.3rem;
-  top: 7px;
-  right: 11px;
-}
-
-.todo_icon:focus {
-  outline: none;
-  font-size: 2.3rem;
-  top: 7px;
-  right: 11px;
-}
-
 .completed_text {
   text-decoration: line-through;
   color: rgb(187, 187, 187);
@@ -175,10 +144,41 @@ body {
   opacity: 1;
 }
 
-.notification_text{
+.notification_text {
   text-align: center;
   font-size: 2rem;
   color: white;
+}
+
+@media screen and (min-width: 600px) {
+  .todo:focus {
+    outline: 2px solid white;
+  }
+  .addtodo_input:focus {
+    outline: none;
+    background: rgba(224, 224, 224, 0.2);
+  }
+  .addtodo_input:hover {
+    background: rgba(224, 224, 224, 0.2);
+  }
+  .todo_edit_input:focus {
+    outline: none;
+    background: rgba(224, 224, 224, 0.2);
+  }
+  .todo_edit_input:hover {
+    background: rgba(224, 224, 224, 0.2);
+  }
+  .todo_icon:hover {
+    font-size: 2.3rem;
+    top: 7px;
+    right: 11px;
+  }
+  .todo_icon:focus {
+    outline: none;
+    font-size: 2.3rem;
+    top: 7px;
+    right: 11px;
+  }
 }
 
 @media all and (max-width: 700px) {
@@ -193,34 +193,27 @@ body {
   .todo_container {
     width: auto;
   }
-
   .todo_icon {
     font-size: 1.2rem;
   }
-  
   .todo {
     padding: 1.8rem 2.2rem;
   }
-
   .todo_text {
     text-align: left;
     font-size: 1.5rem;
   }
-
   .todo_edit_input {
     font-size: 1.5rem;
     padding: .5rem;
   }
-
   .outer_container {
     margin: .5rem;
     width: 100vw;
   }
-
   .inner_container {
     padding: 1.5rem;
   }
-
   .title {
     margin: 1.5rem 0;
   }
